2018-10-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/test_utils.pl, tp/t/nodenormalisation.t:
	Put tp/t/include_reference in srcdir in include path.

	* tp/t/80include.t (test_paths, test_include_directories): 
	Remove tests.
	* tp/t/converters_tests.t (verbatiminclude_paths):
	test_include_directories): Remove tests.
	* tp/t/info_tests.t (image_file_search): Remove test.
	test_include_directories): Remove tests.

	* maintain/regenerate_file_lists.pl: Do not generate rules to 
	copy files to tp/t/include_dir in build directory.

	This avoids the hassle of copying all the include files to the 
	build directory for out-of-source builds and avoids the 
	confusion of which of "t/include", "t/include_dir" or 
	"t/include_reference" a test file is to be added to.  This 
	feature of the test suite is not used enough IMHO to be worth 
	the complexity.

2018-10-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Remove AM_CONDITIONAL for TEXI2HTML.
	* Makefile.am (dist-local): Remove reult for updating 
	translations for texi2html.

2018-10-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (_parse_htmlxref_files) [TEST]:
	Strip leading directories from file name in order to have 
	reliable reference test results for out-of-source builds.

2018-10-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line) <@columnfractions>: Set the 
	'columnfractions' extra value to the element for the 
	@columnfractions command, rather than to the 'misc_args' array 
	of that element.  This is to make a 'misc_args' array only 
	referenced by one element, which makes it possible to free the 
	memory properly in the C rewrite.

	* tp/Texinfo/Convert/DocBook.pm (_convert),
	* tp/Texinfo/Convert/HTML.pm (_convert_tab_command),
	* tp/Texinfo/Convert/Plaintext.pm (_convert),
	* tp/Texinfo/Convert/TexinfoXML.pm (_convert): Update.

2018-10-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/README: Add more advice.
