@@ -196,10 +196,8 @@ test_files = \
 
 document_domain = $(PACKAGE)_document
 
-# $(document_strings_mo_files) and $(test_copied_include_files) come from
-# the generated makefiles Makefile.docstr and Makefile.tres.
-all-local: maintain/catalog.xml $(document_strings_mo_files) \
-           $(test_copied_include_files)
+# $(document_strings_mo_files) comes from the generated Makefile.docstr.
+all-local: maintain/catalog.xml $(document_strings_mo_files)
 
 tp_tests = prove.sh
 
